// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/gif should render with alt attribute 1`] = `
"<!-- wp:coblocks/gif -->
<figure class=\\"wp-block-coblocks-gif\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.gif\\" alt=\\"alt text\\"/></figure>
<!-- /wp:coblocks/gif -->"
`;

exports[`coblocks/gif should render with url attribute 1`] = `
"<!-- wp:coblocks/gif -->
<figure class=\\"wp-block-coblocks-gif\\"><img src=\\"https://wordpress.com/wp-content/uploads/1234/56/image-1.gif\\" alt=\\"\\"/></figure>
<!-- /wp:coblocks/gif -->"
`;
